--- a/functions/package.json
+++ b/functions/package.json
@@ -14,13 +14,14 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^12.0.0",
-    "firebase-functions": "^4.8.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "firebase": "^12.0.0",
+    "firebase-admin": "^12.7.0",
+    "firebase-functions": "^4.9.0"
   },
   "devDependencies": {
-    "typescript": "^4.9.0",
-    "@types/cors": "^2.8.13"
+    "@types/cors": "^2.8.13",
+    "typescript": "^4.9.0"
   },
   "private": true
 }
