--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build"
+    "build": "ng build",
+    "firebase:serve": "firebase emulators:start --only functions",
+    "firebase:deploy": "firebase deploy --only functions",
+    "firebase:build": "cd functions && npm run build"
   },
   "dependencies": {
     "@angular/animations": "^20.0.0",
