--- a/functions/package.json
+++ b/functions/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/node-fetch": "^2.6.4",
     "firebase-tools": "^14.11.2",
     "typescript": "^4.9.0"
   },
